--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IJRWS</title>
+  
+    <title>IJRWS - International Journal of Research on Web Systems</title>
+<meta name="description" content="IJRWS is a peer-reviewed international journal on web technologies and research.">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="IJRWS, Web Systems Journal, Research Journal, Web Technologies, International Journal">
+<meta name="author" content="IJRWS Team">
+
   </head>
   <body>
     <div id="root"></div>
